--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ p {
     <div class="nav-container">
       <div class="nav-pills">
         <span class="nav-pill" onclick="showContent('inicio')">Inicio</span>
-        <span class="nav-pill active" onclick="showContent('imagenes')">Imágenes</span>
+        <span class="nav-pill" onclick="showContent('imagenes')">Imágenes</span>
         <span class="nav-pill" onclick="showContent('contacto')">Contacto</span>
       </div>
     </div>
@@ -303,7 +303,8 @@ p {
     <p>Tu herramienta esencial para gestión de ficheros y Factura</p>
   </section>
 
-  <div id="inicio" class="content-section">
+    <div id="imagenes" class="content-section">
+
     <div class="info-box">
       <h2>¿Qué es copyWizard?</h2>
       <p>copyWizard es una herramienta creada para monitorear sus grabaciones y crear facturas para sus clientes. Es esencial para los que llenan memorias. Esta es una versión de código abierto, libre de virus.</p>
@@ -312,7 +313,8 @@ p {
     </div>
   </div>
 
-  <div id="imagenes" class="content-section active">
+    <div id="inicio" class="content-section active">
+
     <div class="info-box">
       <h2>Imágenes</h2>
       <div class="image-grid">
