--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@ p {
         <div class="image-container">
           <img alt="placeholder image 3, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
         </div>
+        <div class="image-container">
+          <img alt="placeholder image 3, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
+        </div>
       </div>
     </div>
   </div>
