--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ p {
           <img alt="placeholder image 3, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
         </div>
         <div class="image-container">
-          <img alt="placeholder image 3, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
+          <img alt="placeholder image 3, modern minimal design" src="https://i.postimg.cc/FF0Pr1qM/20241104-074604.jpg" width="600" height="400">
         </div>
       </div>
     </div>
