--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ p {
       <h2>Imágenes</h2>
       <div class="image-grid">
         <div class="image-container">
-          <img alt="placeholder image 1, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
+          <img alt="placeholder image 1, modern minimal design" src="https://i.postimg.cc/zBFJ5q1T/20241104-074359.jpg" width="600" height="400">
         </div>
         <div class="image-container">
           <img alt="placeholder image 2, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
