--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ p {
           <img alt="placeholder image 2, modern minimal design" src="https://i.postimg.cc/m2X7BsLx/20241104-074412.jpg" width="600" height="400">
         </div>
         <div class="image-container">
-          <img alt="placeholder image 3, modern minimal design" src="https://placehold.co/600x400/4f46e5/ffffff" width="600" height="400">
+          <img alt="placeholder image 3, modern minimal design" src="https://i.postimg.cc/8CRQJcsm/20241104-074308.jpg" width="600" height="400">
         </div>
         <div class="image-container">
           <img alt="placeholder image 3, modern minimal design" src="https://i.postimg.cc/FF0Pr1qM/20241104-074604.jpg" width="600" height="400">
