--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ p {
       <p>copyWizard es una herramienta creada para monitorear sus grabaciones y crear facturas para sus clientes. Es esencial para los que llenan memorias. Esta es una versión de código abierto, libre de virus.</p>
       <p>Saludos, su creador Rodolfo Jara alias: Tecnonauta</p>
       <h3><p>Visita nuestra página web: <a href="https://tecnonauta610.github.io/promobani/" target="_blank">https://tecnonauta610.github.io/promobani/</a></p></h3>
-      <h3><p>Descarga Nuestra App para Descomprimir Contacte : <a href="https://github.com/tecnonauta610/monitorusb/archive/refs/heads/main.zip/" target="_blank"https://github.com/tecnonauta610/monitorusb/archive/refs/heads/main.zip/</a></p></h3>
+            <h3><p>Descargue Mi App Para Descomprimirla Contacte:<a href="https://github.com/tecnonauta610/monitorusb/archive/refs/heads/main.zip" target="_blank">https://tecnonauta610.github.io/promobani/</a></p></h3>
     </div>
   </div>
 
