--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><base href="https://codingapi.dev/">
+<html>
+<head>
+<base href="https://codingapi.dev/">
 <title>Tecnonauta - copyWizard App</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -171,7 +173,7 @@ main {
 
 h2 {
   color: var(--primary);
-  margin-bottom: 1rem;
+  margin-bottom:  1rem;
 }
 
 p {
@@ -283,7 +285,7 @@ p {
       <span class="logo">Tecnonauta</span>
       <button class="theme-toggle" id="themeToggle">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"/>
+          <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06- 1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"/>
         </svg>
       </button>
     </div>
@@ -303,19 +305,17 @@ p {
     <p>Tu herramienta esencial para gestión de ficheros y Factura</p>
   </section>
 
-    <div id="inicio" class="content-section active">
-
+  <div id="inicio" class="content-section active">
     <div class="info-box">
       <h2>¿Qué es copyWizard?</h2>
       <p>copyWizard es una herramienta creada para monitorear sus grabaciones y crear facturas para sus clientes. Es esencial para los que llenan memorias. Esta es una versión de código abierto, libre de virus.</p>
       <p>Saludos, su creador Rodolfo Jara alias: Tecnonauta</p>
       <h3><p>Visita nuestra página web: <a href="https://tecnonauta610.github.io/promobani/" target="_blank">https://tecnonauta610.github.io/promobani/</a></p></h3>
-            <h3><p>Descargue Mi App Para Descomprimirla Contacte:<a href="https://github.com/tecnonauta610/monitorusb/archive/refs/heads/main.zip" target="_blank">https://tecnonauta610.github.io/promobani/</a></p></h3>
+      <p>Descarga nuestra aplicación Contacte Pa Descomprimirla: <a href="https://github.com/tecnonauta610/monitorusb/archive/refs/heads/main.zip" target="_blank">Descargar ahora CopyWizard</a></p>
     </div>
   </div>
 
-    <div id="imagenes" class="content-section">
-
+  <div id="imagenes" class="content-section">
     <div class="info-box">
       <h2>Imágenes</h2>
       <div class="image-grid">
@@ -374,7 +374,7 @@ function showContent(sectionId) {
 
 let isDarkMode = false;
 
-themeToggle.addEventListener('click', () => {
+themeToggle.addEventListener(' click', () => {
   isDarkMode = !isDarkMode;
   body.classList.toggle('dark-mode');
   
@@ -382,11 +382,12 @@ themeToggle.addEventListener('click', () => {
     themeToggle.innerHTML = `
       <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
         <path d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"/>
+      </svg>
     `;
   } else {
     themeToggle.innerHTML = `
       <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-        <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"/>
+        <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00- 1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"/>
       </svg>
     `;
   }
